# second-brain-assistant

./: .example.env  .gitignore  README.md  app.py  pyproject.toml
second_brain_assistant/: llm.py  notion.py  vectorstore.py
